<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutPageActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/wp2927435"
        android:scaleType="centerCrop"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_ProfilePhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="-50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/profil"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textSize="32sp"
        android:text="@string/myName"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/myEmail"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/myGithub"
        />

</LinearLayout>