<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".UniversityDetailPageActivity">

        <TextView
            android:id="@+id/tv_detailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Universitas Riau" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            >

            <ImageView
                android:id="@+id/iv_detailCover"
                android:layout_width="215dp"
                android:layout_height="340dp"
                android:scaleType="fitCenter"
                android:src="@drawable/unri"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/accreditation"/>

                <TextView
                    android:id="@+id/tv_detailAccreditation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/black"
                    tools:text="Accreditation Name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/address"/>

                <TextView
                    android:id="@+id/tv_detailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/black"
                    tools:text="Address Name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/sinceInyear"/>

                <TextView
                    android:id="@+id/tv_detailSince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/black"
                    tools:text="19XX"/>

                <TextView
                    android:id="@+id/tv_detailStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/black"
                    tools:text="Negeri"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_detailSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            tools:text="synopsis here"/>
    </LinearLayout>

</ScrollView>